<resources>
    <string name="menu_switch_account">Switch account</string>
    <string name="menu_add_account">Add account</string>
    <string name="clear_accounts_menu">Clear all accounts</string>
    <string name="clear_accounts_alert_title">Clear all accounts?</string>
    <string name="clear_accounts_alert_message">Logout and clear all accounts from this device?  This will not delete your library account.</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_dark_mode">Dark Mode</string>
    <string name="menu_light_mode">Light Mode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="options_button_text">Options</string>
    <string name="search_details_title">Search Details</string>
    <string name="checkout_items_title">Items Checked Out</string>
    <string name="hold_items_title">Holds</string>
    <string name="hold_place_title">Place Hold</string>
    <string name="hold_details_title">Hold Details</string>
    <string name="copy_information_title">Copy Information</string>
    <string name="barcode_title">Show Card</string>
    <string name="barcode_description">Barcode</string>
    <string name="barcode_text_description">Barcode numbers</string>
    <string name="barcode_expires_msg">Expires %1$s</string>
    <string name="title_my_lists">My Lists</string>
    <string name="title_list_details">List Details</string>
    <string name="add_to_my_list_message">Add to list</string>
    <string name="msg_added_to_list">Item added to list</string>
    <string name="add_to_my_list_button">Add to list</string>
    <string name="adding_to_list_message">Adding item to list</string>
    <string name="show_details_message">Show details</string>
    <string name="choose_list_message">Select a list</string>
    <string name="title_events">Events</string>
    <string name="username">Username:</string>
    <string name="hint_username">Card Number or Username</string>
    <string name="username_description">user name</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="password">Password:</string>
    <string name="hint_password">Password or PIN</string>
    <string name="password_description">password</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="search_hint">Search words</string>
    <string name="msg_search_words_required">Search words cannot be empty</string>
    <string name="search_button">Search</string>
    <string name="search_button_alt">search</string>
    <string name="search_options_button_alt">search options visible</string>
    <string name="search_class_spinner_alt">query type</string>
    <string name="search_results_alt">search results</string>
    <string name="search_format_spinner_alt">item type</string>
    <string name="search_org_spinner_alt">search library</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="searching_catalog_message">Searching catalog</string>
    <string name="advanced_search_hint">Enter text here</string>
    <string name="advanced_search_add_filter_button">Add filter</string>
    <string name="advanced_search_filter_text">Added filters:</string>
    <string name="menu_button_advanced_search">Advanced search</string>
    <string name="menu_button_library_hours">Library hours</string>
    <string name="menu_button_application_preferences">Preferences</string>
    <string name="copy_information">Availability:</string>
    <string name="title_activity_startup">Welcome to Evergreen</string>
    <string name="title_search">Search</string>
    <string name="title_my_account">My Account</string>
    <string name="title_check_out">Items Checked Out</string>
    <string name="title_holds">Holds</string>
    <string name="renew_button">Renew</string>
    <string name="edit_button">Edit</string>
    <string name="renew_item_message">Renew item?</string>
    <string name="renew_item_negative_button">Don\'t renew</string>
    <string name="renew_item_positive_button">Renew item</string>
    <string name="toast_item_renewed">Item renewed</string>
    <string name="record_of">Item %1$d of %2$d</string>
    <string name="no_results">no results</string>
    <string name="n_results">%1$d results</string>
    <string name="first_n_of_m_results">%1$d most relevant results (of %2$d total)</string>
    <string name="n_of_m_available">%1$d of %2$s available at %3$s</string>
    <string name="n_items_on_hold">%1$d items on hold</string>
    <string name="show_copies">Copy info</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="physical_description">Physical Description</string>
    <string name="error_phone_notify_empty">phone number required</string>
    <string name="sms_notify_hint">10-digit number</string>
    <string name="error_sms_notify_empty">mobile number required</string>
    <string name="mobile_carrier">Mobile carrier</string>
    <string name="enable_phone_notification">Phone notification</string>
    <string name="enable_email_notification">Email notification</string>
    <string name="enable_sms_notification">SMS notification</string>
    <string name="pickup_location">Pickup location</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="suspend_hold">Suspend Hold</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_hold">Cancel Hold</string>
    <string name="back">Back</string>
    <string name="update_hold">Update Hold</string>
    <string name="cancel_hold_dialog_message">Cancel hold?</string>
    <string name="cancel_hold_negative_button">Keep hold</string>
    <string name="cancel_hold_positive_button">Cancel hold</string>
    <string name="thaw_date">Activate hold on</string>
    <string name="hold_phone_hint">Contact phone number</string>
    <string name="msg_loading_place_hold">Loading</string>
    <string name="label_select_hold_part">Select a part</string>
    <string name="title_no_part_selected">No part selected</string>
    <string name="msg_no_part_selected">You must select a part before placing a hold on this item</string>
    <string name="title_not_pickup_location">Not a pickup location</string>
    <string name="msg_not_pickup_location">You cannot pick up items at %1$s</string>
    <string name="hold_status_in_transit">In Transit from %1$s\nSince %2$s</string>
    <string name="hold_status_unavailable">Status unavailable</string>
    <string name="hold_status_available">Ready for pickup</string>
    <string name="hold_status_suspended">Suspended</string>
    <string name="hold_status_waiting_for_copy">Waiting for copy\n%1$s on %2$s</string>
    <string name="hold_status_queue_position">Queue position: %1$d</string>
    <string name="hold_status_expires">Expires %1$s</string>
    <string name="hold_status_estimated_wait">Estimated wait: %1$s</string>
    <string name="title_change_pickup_location">Change pickup location?</string>
    <string name="msg_change_pickup_location">Change pickup location to %1$s?</string>
    <string name="button_just_once">Just once</string>
    <string name="button_always">Always</string>
    <string name="button_place_hold">Place hold</string>
    <string name="advanced_hold_button">Advanced hold</string>
    <string name="advanced_hold_title">Advanced Hold</string>
    <string name="advanced_hold_formats_label">Desired formats</string>
    <string name="advanced_hold_langs_label">Desired languages</string>
    <string name="advanced_hold_msg">An Advanced Hold will be filled by the first available item in any of the Desired formats and languages; for example, either DVD or Blu-ray.</string>
    <string name="no_holdable_formats_msg">No holdable formats found</string>
    <string name="any_x_format_label">Any %1$s</string>
    <string name="notification_options_label">Notification options</string>
    <string name="no_format_selected_title">No format selected</string>
    <string name="no_format_selected_msg">You must select at least one format before placing a hold on this item</string>
    <string name="no_lang_selected_title">No language selected</string>
    <string name="no_lang_selected_msg">You must select at least one language before placing a hold on this item</string>
    <string name="checked_out_items">%s checked out</string>
    <string name="checkout_renewals_left">Renewals left: %d</string>
    <string name="label_due_date">Due %s</string>
    <string name="label_due_date_may_autorenew">Due %s (but may auto-renew)</string>
    <string name="label_due_date_autorenewed">Due %s (item was auto-renewed)</string>
    <string name="label_due_date_overdue">Due %s (overdue)</string>
    <string name="label_checkout_date">Checkout date: %s</string>
    <string name="label_returned_date">Returned date: %s</string>
    <string name="title_fines">Fines</string>
    <string name="msg_retrieving_fines">Retrieving fines</string>
    <string name="button_pay_fines">Pay fines</string>
    <string name="balance_owed">Balance Owed</string>
    <string name="total_owed">Total Owed</string>
    <string name="total_paid">Total Paid</string>
    <string name="menu_delete_bookbag">Delete list</string>
    <string name="menu_sort_bookbag">Sort list</string>
    <string name="menu_sort_descending">Sort descending</string>
    <string name="menu_sort_ascending">Sort ascending</string>
    <string name="msg_sort_by">Sort by</string>
    <string name="list_delete_button">Delete list</string>
    <string name="list_details_button">Details</string>
    <string name="list_item_remove_button">Remove</string>
    <string name="create_list_title">Create list</string>
    <string name="list_name_hint">List name</string>
    <string name="error_list_name_empty">List name is required</string>
    <string name="list_description_hint">Description (optional)</string>
    <string name="preference_login_information">Login information</string>
    <string name="preference_login_informantion_summary">Username and password information</string>
    <string name="preference_username">Username</string>
    <string name="preference_username_summary">Please enter your login username</string>
    <string name="preference_password">Password</string>
    <string name="preference_password_summary">Enter your account password</string>
    <string name="preference_server_information_title">Server settings</string>
    <string name="preference_notification_preference_screen_title">Notification settings</string>
    <string name="preference_notification_preference_screen_summary">Configure notifications and reminders for checkout items</string>
    <string name="preference_enable_notifications">Enable notifications</string>
    <string name="preference_enable_notifications_summary_on">Uncheck this option to disable notifications when items are due</string>
    <string name="preference_enable_notifications_summary_off">Check this option to enable notifications when items are due</string>
    <string name="preference_notifications_days_before">Days before expiration</string>
    <string name="preference_notifications_days_before_summary">Chose how many days before the due date to start reminding</string>
    <string name="preference_notifications_title">Notification settings</string>
    <plurals name="number_of_copies">
        <item quantity="one">1 copy</item>
        <item quantity="other">%d copies</item>
    </plurals>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="title_library_info">Library Info</string>
</resources>