<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- setting actionLayout did not work here, had to set it using code -->
    <item android:id="@+id/action_messages" android:title="@string/menu_messages" app:showAsAction="always" />
    <item android:id="@+id/action_switch_account" android:title="@string/menu_switch_account"/>
    <item android:id="@+id/action_add_account" android:title="@string/menu_add_account"/>
    <item android:id="@+id/action_feedback" android:title="@string/menu_feedback"/>
    <item android:id="@+id/action_donate" android:title="@string/menu_donate"/>
    <item android:id="@+id/action_logout" android:title="@string/menu_logout"/>
    <item android:id="@+id/action_dark_mode" android:title="@string/menu_dark_mode"/>
    <item android:id="@+id/action_light_mode" android:title="@string/menu_light_mode"/>
</menu>