<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
	   android:title="@string/preference_notifications_title" >
        <CheckBoxPreference
            android:title="@string/preference_enable_notifications"
            android:key="notifications_enabled"
            android:summaryOn="@string/preference_enable_notifications_summary_on"
            android:summaryOff="@string/preference_enable_notifications_summary_off"
            android:defaultValue="false"
            />

        <ListPreference
            android:title="@string/preference_notifications_days_before"
            android:key="notifications_days_before_expiration"
            android:summary="@string/preference_notifications_days_before_summary"
            android:entries="@array/notification_preferences_list_entries"
            android:entryValues="@array/notification_preferences_list_values"
            android:defaultValue="3"
            />
    </PreferenceCategory>
</PreferenceScreen> 