<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_messages"
            android:icon="@drawable/ic_mail_outline_white_24dp"
            android:title="@string/menu_messages" />
    </group>
    -->

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/main_btn_search"
            android:icon="@drawable/ic_search_24"
            android:title="@string/title_search" />
        <item
            android:id="@+id/account_btn_check_out"
            android:icon="@drawable/ic_checkouts_24"
            android:title="@string/title_check_out" />
        <item
            android:id="@id/account_btn_holds"
            android:icon="@drawable/ic_holds_24"
            android:title="@string/title_holds" />
        <item
            android:id="@id/account_btn_fines"
            android:icon="@drawable/ic_fines_24"
            android:title="@string/title_fines" />
        <item
            android:id="@id/main_my_lists_button"
            android:icon="@drawable/ic_lists_24"
            android:title="@string/title_my_lists" />
        <item
            android:id="@+id/btn_barcode"
            android:icon="@drawable/ic_barcode_24"
            android:title="@string/barcode_title" />
    </group>

</menu>
