<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_common"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            style="@style/Hemlock.SearchBar"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:gravity="bottom"
                android:hint="@string/search_hint"
                android:imeActionLabel="@string/search_button"
                android:imeOptions="actionSearch"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:minHeight="48dp"
                tools:targetApi="o"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/search_options_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/search_options_button_alt"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:contentDescription="@string/search_button_alt"
                android:text="@string/search_button" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/search_options_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Hemlock.SecondaryBar">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/search_qtype_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/search_qtype_spinner_alt"
                    android:entries="@array/search_qtype"
                    android:minHeight="32dp" />

                <Spinner
                    android:id="@+id/search_format_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/search_format_spinner_alt"
                    android:minHeight="32dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/search_org_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="1dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/search_org_spinner_alt"
                    android:spinnerMode="dialog"
                    android:minHeight="32dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Hemlock.TableHeader">

            <TextView
                android:id="@+id/search_result_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_results"
                tools:text="200 most relevant results" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/search_results_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
