<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
     >

    <include layout="@layout/toolbar_common"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        style="@style/Hemlock.SecondaryToolbar"
        >
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_owed"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_paid"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/balance_owed"
                />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/fines_total_owed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/fines_total_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/fines_balance_owed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>

     </TableLayout>

    <ListView
        android:id="@+id/fines_overdue_materials_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="3dip">

        <Button
            android:id="@+id/pay_fines"
            style="@style/ApplicationButton"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/button_pay_fines" />
    </LinearLayout>

</LinearLayout>