<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <include layout="@layout/toolbar_common"/>

    <Button
        android:id="@+id/main_search_button"
        style="@style/Hemlock.ActionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_search_48"
        android:onClick="onButtonClick"
        android:text="@string/title_search"
        app:drawableTint="@color/button_icon_tint"
        app:layout_constraintBottom_toTopOf="@+id/main_checkouts_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/main_checkouts_button"
        style="@style/Hemlock.ActionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_checkouts_48"
        android:onClick="onButtonClick"
        android:text="@string/title_check_out"
        app:drawableTint="@color/button_icon_tint"
        app:layout_constraintBottom_toTopOf="@+id/main_holds_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_search_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/main_holds_button"
        style="@style/Hemlock.ActionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_holds_48"
        android:onClick="onButtonClick"
        android:text="@string/title_holds"
        app:drawableTint="@color/button_icon_tint"
        app:layout_constraintBottom_toTopOf="@+id/main_fines_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_checkouts_button" />

    <Button
        android:id="@+id/main_fines_button"
        style="@style/Hemlock.ActionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_fines_48"
        android:onClick="onButtonClick"
        android:text="@string/title_fines"
        app:drawableTint="@color/button_icon_tint"
        app:layout_constraintBottom_toTopOf="@+id/main_my_lists_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_holds_button" />

    <Button
        android:id="@+id/main_my_lists_button"
        style="@style/Hemlock.ActionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_lists_48"
        android:onClick="onButtonClick"
        android:text="@string/title_my_lists"
        app:drawableTint="@color/button_icon_tint"
        app:layout_constraintBottom_toTopOf="@+id/main_library_info_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_fines_button" />

    <Button
        android:id="@+id/main_library_info_button"
        style="@style/Hemlock.ActionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_library_48"
        android:onClick="onButtonClick"
        android:text="@string/title_library_info"
        app:drawableTint="@color/button_icon_tint"
        app:layout_constraintBottom_toTopOf="@+id/main_showcard_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_my_lists_button" />

    <Button
        android:id="@+id/main_showcard_button"
        style="@style/Hemlock.ActionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_barcode_48"
        android:onClick="onButtonClick"
        android:text="@string/barcode_title"
        app:drawableTint="@color/button_icon_tint"
        app:layout_constraintBottom_toTopOf="@+id/main_econtent_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_library_info_button" />

    <Button
        android:id="@+id/main_econtent_button"
        style="@style/Hemlock.ActionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_barcode_48"
        android:onClick="onButtonClick"
        android:text="@string/title_electronic_resourses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_showcard_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
